--- a/index.html
+++ b/index.html
@@ -27,43 +27,45 @@
             <p>TRAVEL WITH UNIQUE EXPERIENCE</p>
         </div>
 
-        <div id="discover">
-            <h1>DISCOVER</h1>
-            <h2>Our Hot Services</h2>
-            <p>We hope you can visit and ths beautiful places with your friend and favorite So you can share your feedback to us</p>
-        </div>
+        <div id="main-div">
+            <div id="discover">
+                <h1>DISCOVER</h1>
+                <h2>Our Hot Services</h2>
+                <p>We hope you can visit and ths beautiful places with your friend and favorite So you can share your feedback to us</p>
+            </div>
 
-        <div id="div">
-            <div>
-                <img src="images/pic2.png" alt="pic2">
-                <h1>FLIGHT BOOKING</h1>
-                <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p> 
-             </div>
-             <div>
-                <img src="images/pic3.png" alt="pic3">
-                <h1>HOTEL & RESORT BOOKING</h1>
-                <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p>
+            <div id="div">
+                <div>
+                    <img src="images/pic2.png" alt="pic2">
+                    <h1>FLIGHT BOOKING</h1>
+                    <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p> 
+                </div>
+                <div>
+                    <img src="images/pic3.png" alt="pic3">
+                    <h1>HOTEL & RESORT BOOKING</h1>
+                    <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p>
+                </div>
+                <div>
+                    <img src="images/pic4.png" alt="pic4">
+                    <h1>FAMILY TRIP PLANNER</h1>
+                    <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p>
+                </div>
+                <div>
+                    <img src="images/pic5.png" alt="pic5">
+                    <h1>CRUISE TOUR</h1>
+                    <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p>
+                </div>
+                <div>
+                    <img src="images/pic6.png" alt="pic6">
+                    <h1>FIRE CAMP</h1>
+                    <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p>
+                </div>
+                <div>
+                    <img src="images/pic7.png" alt="pic7">
+                    <h1>CORPORATE HOLYDAYS</h1>
+                    <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p>
+                </div> 
             </div>
-            <div>
-                <img src="images/pic4.png" alt="pic4">
-                <h1>FAMILY TRIP PLANNER</h1>
-                <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p>
-            </div>
-            <div>
-                <img src="images/pic5.png" alt="pic5">
-                <h1>CRUISE TOUR</h1>
-                <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p>
-            </div>
-            <div>
-                <img src="images/pic6.png" alt="pic6">
-                <h1>FIRE CAMP</h1>
-                <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p>
-            </div>
-            <div>
-                <img src="images/pic7.png" alt="pic7">
-                <h1>CORPORATE HOLYDAYS</h1>
-                <p>We hope you can visit and enjoy it ths beautiful places with your friend and favorite people</p>
-            </div> 
         </div>
     </main>
 </body>
